[tool.poetry]
name = "monitorer"
version = "0.1.0"
description = ""
authors = ["Ricardo <ricardocesar1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ignr = "^2.2"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'python "C:\Users\ricardo\Desktop\monitorer\monitorer\monitorer\main.py"'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = 'task lint'
test = 'pytest --cov=monitorer -vv'
post_test = 'coverage html'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
